--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "jquery": "~1.11.1",
     "jquery-ui": "~1.11.4",
-    "fullcalendar": "~2.3.1"
+    "fullcalendar": "~2.3.1",
+    "moment": "momentjs#~2.10.6",
+    "lodash": "~3.10.1"
   }
 }
